# DataBatchProtectionService

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  test_credentials.json
.github/workflows/: cpp_tests.yml
src/client/: dbps_api_client.cpp  dbps_api_client.h  dbps_api_client_test.cpp  http_client_base.cpp  http_client_base.h  http_client_base_test.cpp  http_client_interface.cpp  http_client_interface.h  http_client_interface_test.cpp  httplib_client.cpp  httplib_client.h  httplib_pool_registry.cpp  httplib_pool_registry.h  httplib_pool_registry_test.cpp  httplib_pooled_client.cpp  httplib_pooled_client.h  httplib_pooled_client_test.cpp
src/common/: bytes_utils.h  bytes_utils_test.cpp  dbpa_interface.h  dbpa_interface_test.cpp  dbpa_local.cpp  dbpa_local.h  dbpa_local_test.cpp  dbpa_remote.cpp  dbpa_remote.h  dbpa_remote_test.cpp  dbpa_rpc.cpp  dbpa_rpc.h  dbpa_rpc_test.cpp  dbpa_utils.h  dbpa_utils_test.cpp  dbps_local_shared_lib_wrapper.cpp  dbps_remote_shared_lib_wrapper.cpp  dpba_interface.h  dpba_interface_test.cpp  enum_utils.cpp  enum_utils.h  enum_utils_test.cpp  enums.h  json_request.cpp  json_request.h  json_request_test.cpp  swagger.yaml  typed_list_values.cpp  typed_list_values.h  value_encryption_utils.cpp  value_encryption_utils.h  value_encryption_utils_test.cpp
src/processing/: byte_buffer.cpp  byte_buffer.h  byte_buffer_test.cpp  compression_utils.cpp  compression_utils.h  encryption_sequencer.cpp  encryption_sequencer.h  encryption_sequencer_test.cpp  parquet_testing_utils.h  parquet_utils.cpp  parquet_utils.h  parquet_utils_test.cpp  typed_buffer.h  typed_buffer_codecs.h  typed_buffer_test.cpp  typed_buffer_testing_codecs.h  typed_buffer_values.h  typed_buffer_values_test.cpp  typed_list_values.cpp  typed_list_values.h  typed_list_values_test.cpp  value_encryption_utils.cpp  value_encryption_utils.h  value_encryption_utils_test.cpp
src/processing/encryptors/: basic_encryptor.cpp  basic_encryptor.h  basic_encryptor_test.cpp  basic_xor_encryptor.cpp  basic_xor_encryptor.h  basic_xor_encryptor_test.cpp  dbps_encryptor.h  encryptor_utils.h  encryptor_utils_test.cpp
src/scripts/: dbpa_remote_testapp.cpp  performance_test.cpp
src/server/: auth_utils.cpp  auth_utils.h  auth_utils_test.cpp  bytes_utils.h  compression_utils.cpp  compression_utils.h  compression_utils_test.cpp  dbps_api_server.cpp  decoding_utils.cpp  decoding_utils.h  decoding_utils_test.cpp  encryption_sequencer.cpp  encryption_sequencer.h  encryption_sequencer_test.cpp  exceptions.h  parquet_utils.cpp  parquet_utils.h  parquet_utils_test.cpp
src/server/encryptors/: basic_encryptor.cpp  basic_encryptor.h  basic_encryptor_test.cpp  dbps_encryptor.h
